# SocialDAS_PROCESSOR

./: .env.example  .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml  test_manual.py
alembic/: env.py
alembic/versions/: 08df731b42bd_init.py
src/application/services/: instagram_service.py  tiktok_service.py  youtube_service.py
src/infrastructure/: database.py  logging_config.py  tiktok_token_manager.py  tokens.py
src/infrastructure/kafka/: base_consumer.py  instagram_consumer.py  tiktok_consumer.py  youtube_consumer.py
src/infrastructure/models/: analytics.py  base.py  instagram.py  tiktok.py  youtube.py
src/infrastructure/repositories/: base.py  instagram_repository.py  tiktok_repository.py  youtube_repository.py
src/infrastructure/schemas/: base.py  instagram.py  kafka.py  tiktok.py  youtube.py
src/interfaces/api/: app.py
src/interfaces/api/routers/: get_inst_info.py  get_tt_info.py  instagram.py  tiktok.py  youtube.py
src/interfaces/dependencies/: __init__.py  database.py
src/schemas/: instagram.py  kafka.py  tiktok.py  youtube.py
src/settings/: __init__.py  app.py  db.py  instagram.py  kafka.py  tiktok.py  youtube.py
