[project]
name = "socialdas-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.12.5",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.46",
    "fastapi",
    "httpx>=0.28.1",
    "uvicorn>=0.41.0",
    "uvloop>=0.21.0; sys_platform != 'win32'",
    "asyncpg>=0.30.0",
    "aiokafka>=0.11.0",
    "google-api-python-client>=2.0.0",
    "google-auth>=2.0.0",
    "google-auth-httplib2>=0.2.0",
]
